added basics for service controller and reposiotry for yser

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,7 +4,7 @@ spring:
     dbPort:  13765
     dbHostName: career-tracker-loca2gaming-18ad.g.aivencloud.com
     dbUser: avnadmin
-    dbPassword: AVNS_pQo1WsnuBn7vq6uQGBu
+    dbPassword: 
 
   application:
     name: CareerTracker
