--- a/build.gradle
+++ b/build.gradle
@@ -20,17 +20,25 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
+
 	// This import is necessary for the RestController Annotation
 	implementation 'org.springframework.boot:spring-boot-starter-web' 
+
 	// Spring Data JPA for repository support
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	// In-memory database for development/testing
+	
+	// PostgreSQL driver for runtime when connecting to Postgres
+	runtimeOnly 'org.postgresql:postgresql:42.7.8'
+	// H2 fallback for local development when no Postgres env is present
 	runtimeOnly 'com.h2database:h2'
 
+	// Lombok (annotations like @Data, @NoArgsConstructor, etc.)
 	compileOnly 'org.projectlombok:lombok:1.18.32'
 	annotationProcessor 'org.projectlombok:lombok:1.18.32'
-	testCompileOnly 'org.projectlombok:lombok:1.18.32' // To use it also at compile time instead of default runtime
+
+	testCompileOnly 'org.projectlombok:lombok:1.18.32'
 	testAnnotationProcessor 'org.projectlombok:lombok:1.18.32'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
