--- a/build.gradle
+++ b/build.gradle
@@ -24,8 +24,6 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web' 
 	// Spring Data JPA for repository support
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	// In-memory database for development/testing
-	runtimeOnly 'com.h2database:h2'
 
 	compileOnly 'org.projectlombok:lombok:1.18.32'
 	annotationProcessor 'org.projectlombok:lombok:1.18.32'
@@ -33,7 +31,7 @@ dependencies {
 	testAnnotationProcessor 'org.projectlombok:lombok:1.18.32'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-	runtimeOnly 'org.postgresql:postgresql' // PostgreSQL driver (version managed by Spring Boot BOM)
+	runtimeOnly 'org.postgresql:postgresql' // PostgreSQL driver 
 
 }
 
