changed password encoder to BCrypt password encoder

--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,13 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.security:spring-security-crypto'
 
+	//JWT 
+	// Source: https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-api
+	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'	
+
+	// Source: https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-impl
+	 runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
+
 
 	compileOnly 'org.projectlombok:lombok:1.18.32'
 	annotationProcessor 'org.projectlombok:lombok:1.18.32'
