--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.url=jdbc:postgresql://career-tracker-loca2gaming-18ad.g.aivenc
 spring.datasource.username=avnadmin
 spring.datasource.password=AVNS_pQo1WsnuBn7vq6uQGBu
 spring.datasource.driver-class-name=org.postgresql.Driver
+server.port=9090
