--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,12 @@ spring.datasource.url=jdbc:postgresql://career-tracker-loca2gaming-18ad.g.aivenc
 spring.datasource.username=avnadmin
 spring.datasource.password=AVNS_pQo1WsnuBn7vq6uQGBu
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+
+server.port=8443
+
+server.ssl.enabled=true
+server.ssl.key-store=classpath:keystore.p12
+server.ssl.key-store-password=Loca0307
+server.ssl.key-store-type=PKCS12
+server.ssl.key-alias=springboot
