--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,19 @@
 # Application name
 spring.application.name=CareerTracker
 
-# PostgreSQL connection - values come from environment variables if present
-spring.datasource.url=${DB_URL:jdbc:postgresql://career-tracker-loca2gaming-18ad.g.aivencloud.com:13765/defaultdb?sslmode=require}
-spring.datasource.username=${DB_USER:avnadmin}
-spring.datasource.password=${DB_PASS:AVNS_pQo1WsnuBn7vq6uQGBu}
+# PostgreSQL connection - values MUST come from environment variables in production
+# Set DB_URL, DB_USER and DB_PASS in your shell / deployment environment (or use a secrets manager)
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASS}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-server.port=${SERVER_PORT:8443}
+# Server/config (optional env overrides)
+server.port=${SERVER_PORT}
 
-server.ssl.enabled=${SSL_ENABLED:true}
-server.ssl.key-store=${SSL_KEY_STORE:classpath:keystore.p12}
-server.ssl.key-store-password=${SSL_KEY_STORE_PASSWORD:Loca0307}
-server.ssl.key-store-type=${SSL_KEY_STORE_TYPE:PKCS12}
-server.ssl.key-alias=${SSL_KEY_ALIAS:springboot}
+# SSL - require providing SSL_KEY_STORE and SSL_KEY_STORE_PASSWORD in env for production
+server.ssl.enabled=${SSL_ENABLED}
+server.ssl.key-store=${SSL_KEY_STORE}
+server.ssl.key-store-password=${SSL_KEY_STORE_PASSWORD}
+server.ssl.key-store-type=${SSL_KEY_STORE_TYPE}
+server.ssl.key-alias=${SSL_KEY_ALIAS}
