--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,16 @@
 # Application name
 spring.application.name=CareerTracker
 
-# PostgreSQL connection - values MUST come from environment variables in production
-# Set DB_URL, DB_USER and DB_PASS in your shell / deployment environment (or use a secrets manager)
+# PostgreSQL connection 
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASS}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Server/config (optional env overrides)
+
 server.port=${SERVER_PORT}
 
-# SSL - require providing SSL_KEY_STORE and SSL_KEY_STORE_PASSWORD in env for production
+# SSL 
 server.ssl.enabled=${SSL_ENABLED}
 server.ssl.key-store=${SSL_KEY_STORE}
 server.ssl.key-store-password=${SSL_KEY_STORE_PASSWORD}
