--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,13 @@ server.ssl.key-store=${SSL_KEY_STORE}
 server.ssl.key-store-password=${SSL_KEY_STORE_PASSWORD}
 server.ssl.key-store-type=${SSL_KEY_STORE_TYPE}
 server.ssl.key-alias=${SSL_KEY_ALIAS}
+
+# Redis server host and port
+spring.redis.host=localhost
+spring.redis.port=6379
+
+# Redis password
+spring.redis.password=yourRedisPassword
+
+# Optional: Connection timeout (milliseconds)
+spring.redis.timeout=2000
