--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,6 @@ server.ssl.key-store-password=${SSL_KEY_STORE_PASSWORD}
 server.ssl.key-store-type=${SSL_KEY_STORE_TYPE}
 server.ssl.key-alias=${SSL_KEY_ALIAS}
 
+
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
