--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,5 +18,5 @@ server.ssl.key-store-type=${SSL_KEY_STORE_TYPE}
 server.ssl.key-alias=${SSL_KEY_ALIAS}
 
 
-spring.data.redis.host=localhost
-spring.data.redis.port=6379
+spring.data.redis.host=${REDIS_HOST}
+spring.data.redis.port=${REDIS_PORT}
