finished implementation of docker backed, everything works fine, ports 8080 and 8443 run with docker

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
-build/
-.gradle/
+# Gradle
+backend/build/
+backend/.gradle/
 
+# Spring Boot / Java
+backend/keystore.p12
 
-keystore.p12
-
+# IDEs
 .vscode/
-.metals
+.metals/
 
-.env
+# Environment variables
+backend/.env
