--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,4 +7,6 @@ services:
     env_file:
       - ./backend/.env
 
+# We need to implement Networks to add the frontend and redis services
+# Also consider volumes (a way to save the data created in the container outside of it)
 
