tried to fixed tests, no result

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -49,9 +49,21 @@ dependencies {
 	testCompileOnly 'org.projectlombok:lombok' // To use it also at compile time instead of default runtime
 	testAnnotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	// add security test helpers (Mocking Security context, test support)
+	testImplementation 'org.springframework.security:spring-security-test'
+	// Mockito JUnit 5 integration (useful if spring-boot test starter version doesn't provide the exact flavor you rely on)
+	testImplementation 'org.mockito:mockito-junit-jupiter:5.5.0'
+	// Optional lightweight core mockito (often included via spring-boot-starter-test)
+	testImplementation 'org.mockito:mockito-core:5.5.0'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	runtimeOnly 'org.postgresql:postgresql' // PostgreSQL driver 
 
+	// Spring Boot test helpers (provides WebMvcTest, MockBean, MockMvc, etc.)
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	// ensure autoconfigure/test support is present
+	testImplementation 'org.springframework.boot:spring-boot-test-autoconfigure'
+	// optional explicit test module (usually included via starter-test)
+	testImplementation 'org.springframework.boot:spring-boot-test'
 }
 
 tasks.named('test') {
