--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3.9'
+
 services:
   backend:
     build: ./backend
@@ -6,7 +8,20 @@ services:
       - "8443:8443"
     env_file:
       - ./backend/.env
+    depends_on:
+      - redis
 
-# We need to implement Networks to add the frontend and redis services
+  redis:
+    image: redis:7.2 # official Redis image
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis-data:/data
+    command: ["redis-server", "--appendonly", "yes"]
+
+volumes:
+  redis-data:
+
+# We need to implement Networks to add the frontend
 # Also consider volumes (a way to save the data created in the container outside of it)
 
