--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
     "vite": "^7.3.1"
   },
   "dependencies": {
+    "i18next": "^25.8.4",
+    "i18next-browser-languagedetector": "^8.2.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
+    "react-i18next": "^16.5.4",
     "react-router-dom": "^7.13.0"
   }
 }
